--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="src/index.jsx"></script>
+    <script type="module" src="dist\assets\index-ebb9940d.js"></script>
   </body>
 </html>
