--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/assets/vite-4a748afd.svg" />
     <link href='https://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://use.typekit.net/fiu8vvk.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Maxwell Morris</title>
     
